discussion/kv_engine/170541/170541_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 19:17:02.000000000
Message: 
Uploaded patch set 10: New patch set was added with same tree, parent, and commit message as Patch Set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 19:46:16.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15570/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15570/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17308/ : FAILURE

Timeout of a CTest test [2022-02-11T19:40:57.860Z] 422/422 Test  #90: ep-engine_ep_unit_tests.ExecutorPoolEpEngineTest/FollyExecutorPool ..........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17308/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43880/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36997/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16387/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5218/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17615/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25715/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5279/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 09:09:58.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15576/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15576/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15576/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43887/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0061/0093]: dcp consumer mutate...Exceeded maximum wait time of 60000000us waiting for stat "ep_persist_vbstate_total" to be greater or equal than 1 (last value:0) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43887/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17621/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.MemoryTracking_Run":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.MemoryTracking_Run
[2022-02-14T08:58:04.920Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:1926: Failure
[2022-02-14T08:58:04.920Z] Value of: waitForMemUsedToBe(*engine1, memoryInitial1, memoryPostCancel1)
[2022-02-14T08:58:04.920Z]   Actual: false
[2022-02-14T08:58:04.920Z] Expected: true
[2022-02-14T08:58:04.920Z] Exceeded wait time for memoryPostCancel1 (which is 889432) to return to memoryInitial1 (which is 889208)
[2022-02-14T08:58:04.920Z] [  FAILED  ] ExecutorPoolEpEngineTest/1.MemoryTracking_Run, where TypeParam = FollyExecutorPool (10513 ms)
ExecutorPoolEpEngineTest/1.MemoryTracking_Run
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17621/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37003/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5224/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25721/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5285/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
